# Pacman

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/rendering/: game.h  game_level.h  game_object.h  game_settings.h  particle.h  post_processor.h  resource_manager.h  shader_s.h  sprite_renderer.h  text.h
resources/: one.lvl
source/rendering/: game.cpp  game_level.cpp  game_object.cpp  main.cpp  particle.cpp  post_processor.cpp  resource_manager.cpp  shader_s.cpp  sprite_renderer.cpp  text.cpp  texture.cpp
